running unit tests with latest robolectric plugin